--- a/Lab4/Lab4/Views/Home/Items.cshtml
+++ b/Lab4/Lab4/Views/Home/Items.cshtml
@@ -11,3 +11,21 @@
     <div>@item</div>
 
 }
+
+
+@{ 
+
+    var num = ViewData["numid"];
+
+
+    int num2 = (int)num;
+}
+
+
+@for(int i = 0; i < num2; i++)
+    {
+    <div class="box"><p class="boxfont">@(i + 1)</p></div>
+    }
+
+
+
